# EnergyPlus

./: .decent_ci-Linux.yaml  .decent_ci.yaml  .git-blame-ignore-revs  CMakeLists.txt  LICENSE.txt  dictionary.dic  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  01-bug-report.yml  02-bug-report.yml  02-enhancement-request.yml  config.yml
.github/workflows/: build_wheels.yml  test_code_integrity.yml  test_develop_commits.yml  test_pull_requests.yml
cmake/: CompilerFlags.cmake  Fortran.cmake  ProjectMacros.cmake  PythonCopyStandardLib.py  PythonFixUpTclTk.py  PythonGetBitSize.py  ReverseDDPostProcess.py  RunSimulation.cmake
cmake/codesign_doc/: conf.py
datasets/: LCCusePriceEscalationDataSet2023.idf  LCCusePriceEscalationDataSet2024.idf  WaterToAirHeatPumps.idf
design/FY2025/: AddMultiSpeedWaterToAirCoilChoicesforDesuperheater.md  NFP-epJSON-Editor-Enhancements.md
doc/input-output-reference/src/: input-for-output.tex
doc/tools/: create_changelog.py  example_file_objects.py  example_file_summary.py  idd_parser_library.py  idf_parser_library.py  idf_summary_class.py  parse_ems_actuators.py  parse_latex_log.py  parse_output_variables.py
idd/: BasementGHT.idd  CMakeLists.txt
idd/schema/: generate_epJSON_schema.py  idd_parser.py  modify_schema.py  test_idd_parser.py
scripts/: Epl-run.bat
scripts/dev/: analyze_state.py  api_debug_helper.py  build_regression_summary.py  change_version.py  check_constexpr.py  check_for_bom_in_idfs.py  check_for_c_style_comments.py  check_for_enum_scope_usage.py  check_for_malformed_enums.py  check_for_switch_case_parentheses.py  check_for_tabs.py  check_format_strings.py  check_non_utf8.py  check_stray_fields_in_idd.py  clear_coverage_results.py  compare_output_reports.py  find_byref_bool_override.py  find_included_cc_files.py  gha_coverage_summary.py  gha_regressions.py  license-check.py  license-update.py  licensetext.py  update_gha_actions.py  update_nist_escalation.py  validate_idd_units.py  verify_cmake_dirs.py  verify_file_encodings.py  verify_idfs_in_cmake.py  verify_signature.py
scripts/diagnostics/: afn_auditor.py  auditor.py
scripts/package_tests/: runner.py
scripts/pytests/: conftest.py  test_xml_output.py
src/: .clang-format
src/Basement/: 3DBasementHT.f90  CMakeLists.txt
src/Basement/tests/: AutoGriddingDepthIsHigh.idf  AutoGriddingDepthIsLowish.idf  AutoGriddingDepthIsTooHigh.idf
src/ConvertInputFormat/: main.cpp  test_convert_input_format.py
src/EnergyPlus/: AirLoopHVACDOAS.cc  AirLoopHVACDOAS.hh  AirTerminalUnit.hh  BaseboardElectric.cc  BaseboardElectric.hh  BaseboardRadiator.cc  BaseboardRadiator.hh  BoilerSteam.cc  BoilerSteam.hh  Boilers.cc  Boilers.hh  BranchInputManager.cc  BranchInputManager.hh  BranchNodeConnections.cc  BranchNodeConnections.hh  CMakeLists.txt  CTElectricGenerator.cc  CTElectricGenerator.hh  ChilledCeilingPanelSimple.cc  ChilledCeilingPanelSimple.hh  ChillerAbsorption.cc  ChillerAbsorption.hh  ChillerElectricASHRAE205.cc  ChillerElectricASHRAE205.hh  ChillerElectricEIR.cc  ChillerElectricEIR.hh  ChillerExhaustAbsorption.cc  ChillerExhaustAbsorption.hh  ChillerGasAbsorption.cc  ChillerGasAbsorption.hh  ChillerIndirectAbsorption.cc  ChillerIndirectAbsorption.hh  ChillerReformulatedEIR.cc  ChillerReformulatedEIR.hh  CommandLineInterface.cc  CommandLineInterface.hh  CondenserLoopTowers.cc  CondenserLoopTowers.hh  ConfiguredFunctions.hh  ConfiguredFunctions.in.cc  (+489 more)
src/EnergyPlus/Autosizing/: All_Simple_Sizing.cc  All_Simple_Sizing.hh  Base.cc  Base.hh  (+46 more)
src/ExpandObjects/: epfilter.f90
src/Transition/: table_convert.py  transition_coil_heating_gas.py
testfiles/: 1ZoneUncontrolled_Win_ASH55_Thermal_Comfort.idf  CMakeLists.txt  DOAToPTHP.idf  DOAToUnitarySystem.idf  emall.list
testfiles/API/: tk_gui_demonstration.py  user_defined_equipment.py
workflows/: app_g_postprocess.py  calc_soil_surface_temp.py  coeff_check.py  coeff_conv.py  convert_input_format.py  energyplus.py  transition.py
(+405 files in other folders)
